# image_template_search

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_conda  ImagePatchFinderEdgeCase.py  README.md  batch_template_matching.py  cli.py  count_iguanas.py  data.dvc  detection_deduplication.py  detection_deduplication_2.py  environment.yml  find_template_and_project_labels.py  pyproject.toml  requirements-dev.txt  requirements.txt  workflow.ipynb  workflow_helper.ipynb  workflow_helper_2.ipynb  workflow_iguana_deduplication.ipynb  workflow_iguana_deduplication.py  workflow_image_projection.ipynb
LightGlue/: demo.py  demo_3.py
conf/: config.yaml  config_dataclass.py
examples/: 011_config_generation_batch_template_matching.py  012_batched_template_matching.py  013_batched_human_in_the_loop.py  021_geospatial_register_image_to_orthomosaic.py  batched_calculate_metrics.py  batched_human_in_the_loop.py  batched_template_matching.py  clip_orthomosaic_by_drone_image_loc.py  config_generation_batch_template_matching.py  convert_images_to_cog.py  demo_2.py  demo_3.py  geospatial_register_image_to_orthomosaic.py  human_in_the_loop_delete.py  image_database.py  opencv_drone_to_orthomosaic.py  register_drone_image_to_orthomosaic.py  register_two_orthomosaics.py  review_annotations.py  view.py
image_template_search/: clip_by_location.py  geospatial_transformations.py  image_database.py  image_patch_finder.py  image_rasterization.py  image_similarity.py  kornia_findobject_homography.py  opencv_drone_to_orthomosaic.py  opencv_findobject_homography.py  (+1 more)
(+29 files in other folders)
